--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "lodash": "4.17.15"
+  },  
   "devDependencies": {
     "jest": "^29.7.0"
   }
