--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "actions-explorer",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "jest"
-  },
+  },  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "4.17.15"
-  },  
+    "express": "^4.17.1",
+    "lodash": "^4.17.21",
+    "run": "^1.5.0",
+    "sqlite3": "^5.0.0"
+  },
   "devDependencies": {
     "jest": "^29.7.0"
   }
