--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "actions-explorer",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "jest"
+    "start": "node index.js"
   },  
   "keywords": [],
   "author": "",
