--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
-project(sample-cpp-project)
+project(actions-explorer)
 
 set(CMAKE_CXX_STANDARD 11)
 
 find_package(SQLite3 REQUIRED)
 
-add_executable(ACTIONS-EXPLORER main.cpp)
-target_link_libraries(ACTIONS-EXPLORER SQLite::SQLite3)
+add_executable(actions-explorer main.cpp)
+target_link_libraries(actions-explorer SQLite::SQLite3)
